# filesharing-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: download.rs  http.rs  main.rs  progress.rs  qr.rs  settings.rs  style.rs  token.rs
src/providers/: catbox.rs  fichier.rs  fuckingfast.rs  gofile.rs  litterbox.rs  mod.rs  pixeldrain.rs  rootz.rs  temp_sh.rs  tmpfiles.rs  uguu.rs  util.rs  vikingfile.rs
