[package]
name = "filesharing-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fsc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
indicatif = "0.17"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
