[package]
name = "filesharing-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fsc"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.0", features = ["derive"] }
reqwest = { version = "=0.12.28", features = ["multipart", "json", "stream"] }
tokio = { version = "=1.51.1", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
base64 = "=0.22.1"
indicatif = "=0.17.11"
tokio-util = { version = "=0.7.18", features = ["io"] }
futures-util = "=0.3.32"
http-body = "=1.0.1"
http-body-util = "=0.1.3"
pin-project-lite = "=0.2.17"
bytes = "=1.11.1"
anyhow = "=1.0.102"
owo-colors = "=4.1.0"
comfy-table = "=7.1.3"
dialoguer = { version = "=0.12.0", features = ["fuzzy-select"] }
qrcode = { version = "=0.14.1", default-features = false, features = ["image"] }
image = { version = "=0.25.10", default-features = false, features = ["png"] }
